# criptoMexicoTIJ2023

./: .gitignore  Cargo.toml  README.md  capacitor.config.ts  package-lock.json  package.json
android/app/src/main/res/values/: strings.xml
contracts_wasm/: thread.wasm
front/: capacitor.config.json  ionic.config.json  package-lock.json  package.json
front/android/app/: build.gradle
front/android/app/src/main/res/values/: strings.xml
front/ios/App/App/: Info.plist
front/ios/App/App.xcodeproj/: project.pbxproj
front/src/: App.jsx
ios/App/App/: Info.plist
ios/App/App.xcodeproj/: project.pbxproj
myApp/: index.html  package-lock.json  package.json
myApp/src/: App.tsx
myApp/src/components/: ExploreContainer.tsx  Post.css  Post.tsx
myApp/src/components/ExploreContainer/: ExploreContainer.tsx
myApp/src/components/NewPostBtn/: NewPostBtn.tsx
myApp/src/components/Post/: Post.css  Post.tsx
myApp/src/pages/: Home.tsx
myApp/src/pages/Home/: Home.tsx
myApp/src/pages/NewPost/: NewPost.tsx
serenium/: package.json
serenium/src/: App.jsx  main.jsx
serenium/src/components/: index.ts
serenium/src/components/layout/: index.ts
sereniumV2/GearTemplates/: .env
sereniumV2/GearTemplates/android/app/: build.gradle
sereniumV2/GearTemplates/src/: App.tsx
smart_contracts/FT/: .gitignore
smart_contracts/FT/src/: contract.rs
smart_contracts/post/: .binpath  Cargo.toml  build.rs  post.meta.txt
smart_contracts/post/io/: Cargo.toml
smart_contracts/post/io/src/: lib.rs
smart_contracts/post/src/: lib.rs
smart_contracts/post/state/: Cargo.toml
smart_contracts/post/state/src/: lib.rs
smart_contracts/thread/: .binpath  Cargo.toml  build.rs  escrow.meta.txt  post.meta.txt  thread.meta.txt
smart_contracts/thread/io/: Cargo.toml
smart_contracts/thread/io/src/: lib.rs
smart_contracts/thread/src/: lib.rs
smart_contracts/thread/state/: Cargo.toml
smart_contracts/thread/state/src/: lib.rs
smart_contracts/thread/tests/: post_test.rs
src/: App.css  App.tsx  data_structures_module.rs  main.rs  models.rs  test_graph.rs
src/components/layout/CustomAlert/: CustomAlert.css  CustomAlert.tsx
src/components/layout/LocalBalance/: LocalBalanceToken.tsx
src/components/layout/NavBar/: NavBar.tsx  navBar.css
src/components/layout/PostCard/: CardHeaderChallenge.tsx  CardHeaderQuestion.tsx  PostCard.tsx  postCard.css
src/components/layout/PostContainer/: PostContainer.tsx  postContainer.css
src/components/layout/header/: Header.css  Header.tsx
src/components/layout/header/account/: Account.tsx
src/components/layout/header/account/account-button/: AccountButton.tsx
src/components/layout/header/account/accounts/: accountButton.css
src/components/layout/header/account/wallet/: Wallet.tsx
src/pages/home/: Home.tsx  home.css
(+2 files in other folders)
