[package]
name = "thread-io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gmeta = { git = "https://github.com/gear-tech/gear.git", rev = "946ac47" }
gstd = { git = "https://github.com/gear-tech/gear.git", rev = "946ac47" }
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
petgraph = { version = "0.6.4", features = [] }